# internal-product-search-mcp-server

./: .dockerignore  .env.deploy.example  .gitignore  DEPLOY.md  Dockerfile  Pipfile  README.md  docker-compose.deploy.yml  pyproject.toml
.github/workflows/: main_product-search-mcp-server.yml  main_sfproductsearch.yml
examples/: chatbot_bridge.py
src/product_search_mcp_server/: __init__.py  __main__.py  server.py
