[project]
name = "product_search_mcp_server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that wraps the SF Supplies Typesense-backed product search API."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "typesense", "search", "products", "ai"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
product_search_mcp_server = "product_search_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/product_search_mcp_server"]
